examples/test/testpolicy9279.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9279
  namespace: namespace103
spec:
  podSelector:
    matchLabels:
      key6: value27
      key29: value47
      key39: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value32
          key24: value43
      podSelector:
        matchLabels:
          key23: value18
          key9: value32
          key34: value8
